# Graphics-Playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
applications/: application.cpp  application.h
applications/editor/: CMakeLists.txt  root.config
applications/editor/assets/test/: Patte_avant_tex_meshv2.fbx
applications/editor/assets/test/shaders/: lighting.frag  lighting.vert
applications/editor/cmake/: Utils.cmake
applications/editor/src/: application.cpp  application.h  main.cpp
applications/editor/src/imgui/: ImGuiContextAdapter.cpp  ImGuiContextAdapter.h  ImGuiInstance.cpp  ImGuiInstance.h  ImGuiRenderer.cpp  ImGuiRenderer.h
applications/editor/src/imgui/curvesPanel/: curvesDrawer.h
applications/editor/src/imgui/drawingPanel/: picasso.h  shape.h
applications/editor/src/imgui/raytracerPanel/: rt.cpp  rt.h
applications/editor/src/imgui/raytracerPanel/renderer/: i_renderer.h  ray.h  threaded_cpu_renderer.h  utils.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/: basic_scene.h  i_scene.h  object_manager.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/camera/: i_camera.h  positionable_camera.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/image/: i_image.h  rgb_image.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/objects/: box.h  i_object.h  sphere.h  triangle_mesh.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/objects/lights/: i_light.h  point_light.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/objects/materials/: glass.h  i_material.h  metal.h
applications/editor/src/imgui/raytracerPanel/renderer/scene/objects/materials/textures/: base_color.h  checker.h  i_texture.h
applications/editor/src/imgui/scenePanel/: SceneEditor.cpp  SceneEditor.h
editor/: CMakeLists.txt
editor/src/: application.cpp  application.h  main.cpp
engine/: CMakeLists.txt
engine/include/: ResourceManager.h
engine/include/engine/: Bounds.h  Camera.cpp  Camera.h  EngineInstance.h  EntityView.h  ImageResource.h  Input.h  Light.h  LineRenderer.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Resource.h  ResourceHandle.h  ResourceManager.h  Scene.h  SceneNode.h  SceneRenderData.h  SceneRenderer.h  Stage.h  TestRenderPass.h  Transform.cpp  Transform.h  engine.h  stb_image.h  stb_image_write.h
engine/include/engine/components/: CameraComponent.h  LightComponent.h  MeshComponent.h
engine/include/engine/graphics/: DeviceManager.h  Material.h  MaterialResource.h  MeshResource.h  RenderTarget.h  Renderable.cpp  Renderable.h  Renderer.h  ShaderProgram.h  ShaderResource.h  TextureResource.h  VertexData.h  VertexDataLayout.h
engine/include/engine/util/: Math.h  Ray.h  UUID.h
engine/src/engine/: Bounds.cpp  Camera.cpp  EngineInstance.cpp  Entity.cpp  EntityView.cpp  ImageResource.cpp  ImageResource.h  Input.cpp  Light.cpp  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  MeshRenderer.cpp  Model.cpp  Resource.cpp  ResourceHandle.cpp  ResourceManager.cpp  Scene.cpp  SceneNode.cpp  SceneRenderer.cpp  Stage.cpp  TempResourceInitializer.cpp  TempResourceInitializer.h  TestRenderPass.cpp  Transform.cpp  engine.cpp
engine/src/engine/components/: CameraComponent.cpp  LightComponent.cpp  MeshComponent.cpp
engine/src/engine/graphics/: DeviceManager.cpp  Material.cpp  MaterialResource.cpp  MeshResource.cpp  RenderTarget.cpp  Renderable.cpp  Renderer.cpp  ShaderProgram.cpp  ShaderResource.cpp  TextureResource.cpp  VertexData.cpp  VertexDataLayout.cpp
engine/src/engine/util/: Math.cpp  Ray.cpp  UUID.cpp  earcut.hpp
graphicsAPI/src/opengl/: Context.cpp
projects/: CMakeLists.txt
renderer/: CMakeLists.txt
renderer/include/: renderer.h
renderer/include/renderer/: iRenderer.h  renderer.h
renderer/include/renderer/renderAPI/: indexBuffer.h  openGLRenderer.h  shader.h  vertexBuffer.h
renderer/src/: renderer.cpp
renderer/src/renderer/: openGLRenderer.cpp  renderer.cpp
src/: main.cpp
